# sol-vanity-desktop

./: Cargo.toml  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  style.css
vanity-core/: Cargo.toml
vanity-core/src/: lib.rs
